Changed (unix only) to extract a family name from a pref font name, bug 45762, r=erik.